--- a/css/styles.css
+++ b/css/styles.css
@@ -50,40 +50,43 @@ img {
 .link {
   text-decoration: none;
 }
-
 .container {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
-
 .section {
   padding-bottom: 120px;
 }
-
-.flex {
+.flexSpaceBetween {
   display: flex;
+  justify-content: space-between;
+}
+.visually-hidden {
+  visibility: hidden;
 }
 
 /* Header */
 .header {
   border-bottom: 1px solid var(--accent);
 }
-
 .header-nav {
   display: flex;
   align-items: center;
 }
-
 .nav-ul {
   display: flex;
   gap: 40px;
+}
+.nav-li {
   padding: 24px 0;
 }
 
 .address-ul {
   display: flex;
   gap: 40px;
+}
+.adress-li {
   padding: 24px 0;
 }
 
@@ -140,7 +143,7 @@ img {
 
 /* Main */
 /* Section 1 - Hero  */
-.sectionHero {
+.section-hero {
   padding: 188px 0;
   text-align: center;
   background-color: var(--dark);
@@ -180,7 +183,7 @@ img {
 }
 
 /* Section 2 - Properties  */
-.sectionProp {
+.section-prop {
   padding: 120px 0;
 }
 .properties-ul {
@@ -224,7 +227,7 @@ img {
 }
 
 /* Section 4 - Team  */
-.sectionTeam {
+.section-team {
   padding: 120px 0;
   background-color: var(--light);
 }
@@ -245,6 +248,7 @@ img {
   text-align: center;
   flex-basis: calc((100% - 3 * 24px) / 4);
   background-color: var(--white-background);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-div {
   padding: 32px 0;
@@ -263,7 +267,7 @@ img {
 }
 
 /* Portfolio Page */
-.sectionPortfolio {
+.section-portfolio {
   padding: 96px 0 120px 0;
 }
 
