--- a/css/styles.css
+++ b/css/styles.css
@@ -58,16 +58,28 @@ img {
 .section {
   padding-bottom: 120px;
 }
-.flexSpaceBetween {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .visually-hidden {
-  visibility: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* Header */
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 .header {
   border-bottom: 1px solid var(--accent);
 }
@@ -128,6 +140,9 @@ img {
 }
 .address {
   font-style: normal;
+}
+.adress-li {
+  padding: 24px 0;
 }
 .adress-a {
   padding: 24px 0;
