--- a/css/styles.css
+++ b/css/styles.css
@@ -72,13 +72,10 @@ img {
 }
 
 /* Header */
-.headerContainer {
+.flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
 }
 .header {
   border-bottom: 1px solid var(--accent);
