--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ img {
 
 /* Site nav */
 .site-nav-a {
+  padding: 24px 0;
   text-decoration: none;
   line-height: 1.5;
   letter-spacing: 0.02em;
